Fixed some errors in testing and implementation